--- a/web_server/5-design_a_beautiful_404_page.html
+++ b/web_server/5-design_a_beautiful_404_page.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Ceci n'est pas une page</p>
+    <p><span style="background-color: red">Ceci n'est pas une page</span></p>
 
 </body>
 </html>
